# fastapi-proj

./: .env  .env.example  .gitingore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1382c6ce415e_add_permission_role_role_permission_.py  7af14fa19bb2_add_users_table.py  8ed3352f42f3_initial_migration.py  972893b1fa6c_add_users_table_retry.py  989355bafcd1_set_ondelete_set_null_for_role_id.py  cbe0b803d5ee_add_permission_role_role_permission_.py
src/movie_app/: main.py
src/movie_app/auth/v1/: crud.py  deps.py  exceptions.py  permissions.py  schemas.py
src/movie_app/auth/v1/routers/: auth.py
src/movie_app/auth/v1/services/: auth_service.py
src/movie_app/core/: config.py  logging_config.py  security.py
src/movie_app/core/authorization/: permissions.py
src/movie_app/infrastructure/database/: deps.py  session.py
src/movie_app/infrastructure/redis/: deps.py  redis_client.py
src/movie_app/initial_data/: role_seeder.py
src/movie_app/users/v1/: deps.py  exceptions.py
src/movie_app/users/v1/crud/: user_crud.py
src/movie_app/users/v1/models/: __init__.py  permission.py  role.py  role_permission.py  user.py
src/movie_app/users/v1/routers/: user.py
src/movie_app/users/v1/schemas/: user_schemas.py
src/movie_app/users/v1/services/: redis_cache_service.py  user_service.py
